# taskspace

./: .gitignore  AGENTS.md  Cargo.toml  README.md  SKILL.md  SKILLS.md  deny.toml  mise.toml
.github/workflows/: ci.yml  release.yml
crates/taskspace-app/: Cargo.toml
crates/taskspace-app/src/: config.rs  doctor.rs  lib.rs  paths.rs  repo_import.rs  spec.rs  template.rs  validation.rs
crates/taskspace-cli/: Cargo.toml
crates/taskspace-cli/src/: execute.rs  exit_code.rs  main.rs  parse.rs  render.rs
crates/taskspace-cli/tests/: main.rs
crates/taskspace-core/: Cargo.toml
crates/taskspace-core/src/: editor.rs  lib.rs
crates/taskspace-infra-fs/: Cargo.toml
crates/taskspace-infra-fs/src/: fs.rs  lib.rs  process.rs
docs/: design-intent.md  release.md
examples/: task-example.yaml  template-minimal.yaml  template-monorepo.yaml
templates/: SKILLS.md
