[workspace]
members = [
  "crates/taskspace-core",
  "crates/taskspace-app",
  "crates/taskspace-infra-fs",
  "crates/taskspace-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/viasnake/taskspace"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
home = "0.5.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
url = "2.5.7"
