[workspace]
members = [
  "crates/taskspace-core",
  "crates/taskspace-app",
  "crates/taskspace-infra-fs",
  "crates/taskspace-cli",
]
resolver = "2"

[workspace.package]
version = "0.4.0"
edition = "2024"
repository = "https://github.com/viasnake/taskspace"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
home = "0.5.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.18"
toml = "0.8.19"
url = "2.5.7"
